; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_bus.c_bus_enumerate_hinted_children.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_bus.c_bus_enumerate_hinted_children.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"at\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bus_enumerate_hinted_children(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i8* @device_get_nameunit(i32 %7)
  store i8* %8, i8** %5, align 8
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %13, %1
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @resource_find_match(i32* %3, i8** %4, i32* %6, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %10)
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %9
  %14 = load i32, i32* %2, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @BUS_HINTED_CHILD(i32 %14, i8* %15, i32 %16)
  br label %9

18:                                               ; preds = %9
  %19 = load i32, i32* %2, align 4
  %20 = call i8* @device_get_name(i32 %19)
  store i8* %20, i8** %5, align 8
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %25, %18
  %22 = load i8*, i8** %5, align 8
  %23 = call i64 @resource_find_match(i32* %3, i8** %4, i32* %6, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %22)
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %21
  %26 = load i32, i32* %2, align 4
  %27 = load i8*, i8** %4, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @BUS_HINTED_CHILD(i32 %26, i8* %27, i32 %28)
  br label %21

30:                                               ; preds = %21
  ret void
}

declare dso_local i8* @device_get_nameunit(i32) #1

declare dso_local i64 @resource_find_match(i32*, i8**, i32*, i8*, i8*) #1

declare dso_local i32 @BUS_HINTED_CHILD(i32, i8*, i32) #1

declare dso_local i8* @device_get_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
